2009-09-08  Akira TAGOH  <akira@tagoh.org>

	* src/factory.c (imsettings_manager_real_finalize): unreference the object.

2009-09-01  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.107.3.

	* NEWS: update.

	* src/factory.c (_process_info_unref): stop watching fd.
	(_logger_write_cb): avoid getting stuck to wait for read data.
	(_watch_im_status_cb): avoid restarting the unnecessary process.
	(_imsettings_manager_start_im_aux): new.
	(_imsettings_manager_start_im_main): new.

2009-08-27  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.107.2.

	* NEWS: update.

	* src/factory.c (disconnected_cb): exit with the disconnect signal
	properly.

	* imsettings/imsettings-observer.c (imsettings_observer_setup):
	Set a flag to not exit with the disconnect signal.

2009-08-26  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: Apply the environment variables properly.

2009-08-14  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.107.1.

	* NEWS: update.

2009-08-12  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-object.c (imsettings_object_dump): 
	Fix memory leaks.

	* src/monitor.c (imsettings_monitor_real_changed_xinputrc): likewise.
	(_imsettings_monitor_start_for_xinputrc): likewise.

	* src/factory.c (_output_log): likewise.
	(_watch_im_status_cb): likewise.
	(imsettings_manager_real_stop_im): likewise.

	* configure.ac: bump to 0.107.0

	* NEWS: update.

	* src/factory.c (main): Add a --no-logfile option for testing.

	* utils/imsettings-list.c (main): don't restart the daemon
	automatically.

	* utils/imsettings-stop.c (main): likewise.

	* utils/imsettings-start.c (main): likewise.

	* utils/imsettings-restart.c (main): likewise.

	* src/factory.c (_notify): notify an error through libnotify.
	(imsettings_manager_real_stop_im): ignore an error to stop the aux
	process if IM doesn't use it.
	(imsettings_manager_real_stop_im): ignore an error to stop the xim
	process if IM is immodule only.
